--- a/src/styles/pages/category/product-list.scss
+++ b/src/styles/pages/category/product-list.scss
@@ -165,7 +165,7 @@
 }
 
 .scaled-prices {
-  margin-bottom: ($space-default * 2);
+  margin-bottom: $space-default;
   font-family: $font-family-condensedregular;
   color: $text-color-quaternary;
 }
